--- a/app/src/main/res/layout/activity_main_nav_header.xml
+++ b/app/src/main/res/layout/activity_main_nav_header.xml
@@ -20,7 +20,7 @@
     android:background="?attr/colorPrimaryDark"
     android:gravity="bottom"
     android:orientation="vertical"
-    android:padding="15dp"
+    android:padding="@dimen/nav_header_padding"
     android:theme="@style/ThemeOverlay.AppCompat.Dark">
 
     <TextView
