--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -18,5 +18,22 @@
     <dimen name="third">20dp</dimen>
 
 
-    <dimen name="AddUserInput_margin">10dp</dimen>
+    <dimen name="add_user_input_margin">10dp</dimen>
+
+    <dimen name="deviceItem_margin">5dp</dimen>
+
+    <dimen name="nav_header_padding">15dp</dimen>
+
+    <dimen name="toolbar_drop_shadow">3dp</dimen>
+
+    <dimen name="searching_progress_bar">32dp</dimen>
+
+    <dimen name="detail_app_bar_layout_height">256dp</dimen>
+    <dimen name="expanded_title_margin_end">64dp</dimen>
+    <dimen name="expanded_title_margin_start">48dp</dimen>
+
+    <dimen name="circle_counter_size">300dp</dimen>
+    <dimen name="circle_counter_margin">30dp</dimen>
+
+    <dimen name="device_characteristic_margin">7dp</dimen>
 </resources>
