--- a/app/src/main/res/values/styles_detail.xml
+++ b/app/src/main/res/values/styles_detail.xml
@@ -6,7 +6,7 @@
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_gravity">center_vertical</item>
-        <item name="android:layout_margin">7dp</item>
+        <item name="android:layout_margin">@dimen/deviceItem_margin</item>
         <item name="android:background">@null</item>
         <item name="android:textColor">@color/nursingPrimary_light</item>
     </style>
@@ -22,13 +22,13 @@
 
     <style name="DetailItemCard" parent="CardView">
         <item name="cardCornerRadius">2dp</item>
-        <item name="cardElevation">7dp</item>
+        <item name="cardElevation">5dp</item>
         <item name="cardPreventCornerOverlap">false</item>
         <item name="contentPadding">0dp</item>
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_gravity">center</item>
-        <item name="android:layout_margin">7dp</item>
+        <item name="android:layout_margin">@dimen/deviceItem_margin</item>
         <item name="android:background">@null</item>
     </style>
 
@@ -48,7 +48,7 @@
     <style name="DeviceText">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
-        <item name="android:layout_margin">3dp</item>
+        <item name="android:layout_margin">2dp</item>
     </style>
 
     <style name="DeviceItemRecyclerView">
@@ -73,27 +73,26 @@
         <item name="android:background">@null</item>
         <item name="android:layout_gravity">start</item>
         <item name="android:layout_weight">1</item>
-        <item name="android:layout_marginStart">5dp</item>
+        <item name="android:layout_marginStart">@dimen/deviceItem_margin</item>
     </style>
 
     <style name="DeviceCharacteristicSubInfoLabel" parent="DeviceCharacteristicInfoLabel">
         <item name="android:textColor">@color/secondary_text</item>
         <item name="android:textSize">10sp</item>
-        <item name="android:layout_marginBottom">7dp</item>
+        <item name="android:layout_marginBottom">@dimen/deviceItem_margin</item>
     </style>
 
     <style name="DeviceCharacteristicSubInfo" parent="DeviceCharacteristicInfo">
         <item name="android:textColor">@color/secondary_text</item>
         <item name="android:textSize">10sp</item>
-        <item name="android:layout_marginBottom">7dp</item>
+        <item name="android:layout_marginBottom">@dimen/deviceItem_margin</item>
     </style>
 
     <style name="DeviceCharacteristicButton">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
-        <item name="android:layout_marginTop">1dp</item>
+        <item name="android:layout_marginTop">2dp</item>
         <item name="android:layout_weight">1</item>
     </style>
-
 
 </resources>
