--- a/app/src/main/res/layout/activity_nursing_main.xml
+++ b/app/src/main/res/layout/activity_nursing_main.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/nursing_drawer_layout"
-    style="@style/DrawerLayout">
+<android.support.v4.widget.DrawerLayout android:id="@+id/nursing_drawer_layout"
+                                        style="@style/DrawerLayout"
+                                        xmlns:android="http://schemas.android.com/apk/res/android"
+                                        xmlns:app="http://schemas.android.com/apk/res-auto"
+                                        xmlns:tools="http://schemas.android.com/tools">
 
     <android.support.design.widget.CoordinatorLayout
         android:id="@+id/nursing_coordinatorLayout"
@@ -16,37 +16,38 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="?attr/actionBarSize"
                 android:background="@null"
                 app:layout_scrollFlags="scroll|enterAlways"
                 app:popupTheme="@style/AppTheme.PopupOverlay">
 
                 <android.support.v7.widget.Toolbar
                     android:id="@+id/nursing_toolbar"
-                    android:layout_width="240dp"
-                    android:layout_height="?attr/actionBarSize"
-                    android:layout_weight="1.68"
-                    android:background="?attr/colorPrimary" />
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="0.5"
+                    android:background="?attr/colorPrimary"/>
 
                 <TextView
                     android:id="@+id/nursing_toolbar_rssi"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
                     android:layout_gravity="center_vertical"
                     android:layout_margin="5dp"
                     android:layout_weight="1"
                     android:background="@null"
                     android:gravity="center"
                     android:text="@string/rssi"
-                    android:textAppearance="?android:attr/textAppearanceMedium" />
+                    android:textAppearance="?android:attr/textAppearanceMedium"/>
 
                 <ImageView
                     android:id="@+id/nursing_toolbar_bluetoothFlag"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
                     android:layout_margin="10dp"
-                    android:contentDescription="@string/rssi" />
+                    android:layout_weight="1"
+                    android:contentDescription="@string/rssi"/>
 
 
             </LinearLayout>
@@ -57,7 +58,7 @@
                 android:layout_height="wrap_content"
                 android:background="@null"
                 app:tabGravity="center"
-                app:tabMode="scrollable" />
+                app:tabMode="scrollable"/>
 
 
         </android.support.design.widget.AppBarLayout>
@@ -67,7 +68,7 @@
             android:layout_height="3dp"
             android:background="@drawable/toolbar_drop_shadow"
             app:layout_anchor="@id/nursing_tabs"
-            app:layout_anchorGravity="bottom|center" />
+            app:layout_anchorGravity="bottom|center"/>
 
         <android.support.v4.widget.SwipeRefreshLayout
             android:id="@+id/dashboard_device_swipeRefreshLayout"
@@ -81,7 +82,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@null"
-                android:foreground="?android:windowContentOverlay" />
+                android:foreground="?android:windowContentOverlay"/>
         </android.support.v4.widget.SwipeRefreshLayout>
 
     </android.support.design.widget.CoordinatorLayout>
@@ -90,5 +91,5 @@
     <android.support.design.widget.NavigationView
         android:id="@+id/nursing_nav_view"
         style="@style/NavigationView"
-        app:menu="@menu/menu_nursing" />
+        app:menu="@menu/menu_nursing"/>
 </android.support.v4.widget.DrawerLayout>
