--- a/app/src/main/res/layout/bluetooth_device_item.xml
+++ b/app/src/main/res/layout/bluetooth_device_item.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/device_item_card"
-    style="@style/MainItemCard"
+    style="@style/DeviceItemCard"
     android:clickable="true"
     android:foreground="?android:attr/selectableItemBackground">
 
@@ -11,66 +11,66 @@
         android:background="@null"
         android:padding="20dp">
 
-        <TableRow style="@style/MainItemTableRow">
+        <TableRow style="@style/DeviceItemTableRow">
 
             <TextView
-                style="@style/MainItemLabel"
-                android:text="@string/detail_name"
+                style="@style/DeviceItemLabel"
+                android:text="@string/detail.name"
                 android:textColor="#4169e1" />
 
             <TextView
                 android:id="@+id/item_name"
-                style="@style/MainItemText"
+                style="@style/DeviceItemText"
                 android:textColor="#4169e1" />
         </TableRow>
 
-        <TableRow style="@style/MainItemTableRow">
+        <TableRow style="@style/DeviceItemTableRow">
 
             <TextView
-                style="@style/MainItemLabel"
-                android:text="@string/detail_address"
+                style="@style/DeviceItemLabel"
+                android:text="@string/detail.address"
                 android:textColor="#dc143c" />
 
             <TextView
                 android:id="@+id/item_address"
-                style="@style/MainItemText"
+                style="@style/DeviceItemText"
                 android:textColor="#dc143c" />
         </TableRow>
 
-        <TableRow style="@style/MainItemTableRow">
+        <TableRow style="@style/DeviceItemTableRow">
 
             <TextView
-                style="@style/MainItemLabel"
-                android:text="@string/bond_state" />
+                style="@style/DeviceItemLabel"
+                android:text="@string/detail.bond.state" />
 
             <TextView
                 android:id="@+id/item_bond"
-                style="@style/MainItemText"
+                style="@style/DeviceItemText"
                 android:textAppearance="?android:attr/textAppearanceSmall" />
         </TableRow>
 
-        <TableRow style="@style/MainItemTableRow">
+        <TableRow style="@style/DeviceItemTableRow">
 
             <TextView
-                style="@style/MainItemLabel"
-                android:text="@string/detail_type" />
+                style="@style/DeviceItemLabel"
+                android:text="@string/detail.type" />
 
             <TextView
                 android:id="@+id/item_type"
-                style="@style/MainItemText"
+                style="@style/DeviceItemText"
                 android:textAppearance="?android:attr/textAppearanceSmall" />
 
         </TableRow>
 
-        <TableRow style="@style/MainItemTableRow">
+        <TableRow style="@style/DeviceItemTableRow">
 
             <TextView
-                style="@style/MainItemLabel"
-                android:text="@string/detail_rssi" />
+                style="@style/DeviceItemLabel"
+                android:text="@string/detail.rssi" />
 
             <TextView
                 android:id="@+id/item_rssi"
-                style="@style/MainItemText"
+                style="@style/DeviceItemText"
                 android:textAppearance="?android:attr/textAppearanceSmall" />
         </TableRow>
     </TableLayout>
