--- a/app/src/main/res/layout/detail_bluetooth_characteristics_item.xml
+++ b/app/src/main/res/layout/detail_bluetooth_characteristics_item.xml
@@ -9,13 +9,13 @@
         <TextView
             android:id="@+id/detail_child_list_item_characteristics_title"
             style="@style/DetailItemTextView"
-            android:text="@string/detail_child_list_item_characteristics_title"
+            android:text="@string/detail.child.list.item.characteristics.title"
             android:textSize="20sp" />
 
         <TextView
             android:id="@+id/detail_child_list_item_characteristics_UUID"
             style="@style/DetailItemTextView"
-            android:text="@string/detail_child_list_item_characteristics_UUID" />
+            android:text="@string/detail.child.list.item.characteristics.UUID" />
     </LinearLayout>
 
 </android.support.v7.widget.CardView>
