--- a/app/src/main/res/layout/fragment_nursing_main_calorie.xml
+++ b/app/src/main/res/layout/fragment_nursing_main_calorie.xml
@@ -1,29 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@null">
-
+<android.support.v4.widget.NestedScrollView
+    style="@style/NestedScrollView"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@null"
         android:orientation="vertical">
-
-
         <com.rainbow.kam.bt_scanner.tools.design.CircleCounter
             android:id="@+id/calorie_counter"
-            android:layout_width="300dp"
-            android:layout_height="300dp"
-            android:layout_gravity="center_horizontal"
-            android:layout_margin="30dp"
-            app:metricSize="20sp"
-            app:metricText="calorie"
-            app:range="60"
-            app:textColor="#ffffff"
-            app:textSize="100sp" />
-
+            style="@style/CircleCounter"
+            app:metricText="calorie"/>
     </LinearLayout>
-
 </android.support.v4.widget.NestedScrollView>
