--- a/app/src/main/res/layout/fragment_nursing_main_step.xml
+++ b/app/src/main/res/layout/fragment_nursing_main_step.xml
@@ -1,22 +1,18 @@
-<?xml version="1.0" encoding="utf-8"?><!--<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"--><!--xmlns:app="http://schemas.android.com/apk/res-auto"--><!--android:layout_width="match_parent"--><!--android:layout_height="match_parent"--><!--android:background="@null">-->
+<?xml version="1.0" encoding="utf-8"?>
+<android.support.v4.widget.NestedScrollView
+    style="@style/NestedScrollView"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@null"
-    android:orientation="vertical">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@null"
+        android:orientation="vertical">
 
-
-    <com.rainbow.kam.bt_scanner.tools.design.CircleCounter
-        android:id="@+id/step_counter"
-        android:layout_width="300dp"
-        android:layout_height="300dp"
-        android:layout_gravity="center_horizontal"
-        android:layout_margin="30dp"
-        app:metricSize="20sp"
-        app:metricText="step"
-        app:range="60"
-        app:textColor="#ffffff"
-        app:textSize="100sp" />
-</LinearLayout>
+        <com.rainbow.kam.bt_scanner.tools.design.CircleCounter
+            android:id="@+id/step_counter"
+            style="@style/CircleCounter"
+            app:metricText="step"/>
+    </LinearLayout>
+</android.support.v4.widget.NestedScrollView>
