--- a/app/src/main/res/layout/fragment_nursing_splash_add_device.xml
+++ b/app/src/main/res/layout/fragment_nursing_splash_add_device.xml
@@ -1,8 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@null">
+<RelativeLayout style="@style/NestedScrollView"
+                xmlns:android="http://schemas.android.com/apk/res/android">
 
     <android.support.v4.widget.SwipeRefreshLayout
         android:id="@+id/nursing_device_swipeRefreshLayout"
@@ -22,20 +20,10 @@
 
     <ProgressBar
         android:id="@+id/nursing_searching_progress_bar"
-        android:layout_width="32dp"
-        android:layout_height="32dp"
-        android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
-        android:background="@null"
-        android:indeterminate="true" />
+        style="@style/SearchingProgressBar"/>
 
     <TextView
         android:id="@+id/nursing_no_device_textView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
-        android:background="@null"
-        android:indeterminate="true"
-        android:text="@string/has_not_card_nursing" />
+        style="@style/NoDeviceLabel"
+        android:text="@string/device.list.nothing.nursing"/>
 </RelativeLayout>
