--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,5 +1,5 @@
-<resources>
-
+<resources
+    xmlns:app="http://schemas.android.com/apk/res-auto">
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
         <!-- Customize your theme here. -->
@@ -21,9 +21,9 @@
         <item name="android:orientation">vertical</item>
     </style>
 
-    <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
+    <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar"/>
 
-    <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
+    <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light"/>
 
     <style name="DrawerLayout">
         <item name="android:layout_width">match_parent</item>
@@ -50,6 +50,37 @@
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">match_parent</item>
         <item name="android:background">@null</item>
+    </style>
+
+    <style name="NestedScrollView" parent="CoordinatorLayout"/>
+
+    <style name="SearchingProgressBar">
+        <item name="android:layout_width">@dimen/searching_progress_bar</item>
+        <item name="android:layout_height">@dimen/searching_progress_bar</item>
+        <item name="android:background">@null</item>
+        <item name="android:layout_centerVertical">true</item>
+        <item name="android:layout_centerHorizontal">true</item>
+        <item name="android:indeterminate">true</item>
+    </style>
+
+    <style name="NoDeviceLabel">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:background">@null</item>
+        <item name="android:layout_centerVertical">true</item>
+        <item name="android:layout_centerHorizontal">true</item>
+        <item name="android:indeterminate">true</item>
+    </style>
+
+    <style name="CircleCounter">
+        <item name="android:layout_width">@dimen/circle_counter_size</item>
+        <item name="android:layout_height">@dimen/circle_counter_size</item>
+        <item name="android:layout_gravity">center_horizontal</item>
+        <item name="android:layout_margin">@dimen/circle_counter_margin</item>
+        <item name="metricSize">20sp</item>
+        <item name="range">60</item>
+        <item name="textColor">@color/circle_text</item>
+        <item name="textSize">100sp</item>
     </style>
 
 </resources>
