--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.design.widget.CoordinatorLayout
-    style="@style/CoordinatorLayout"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@null"
     android:fitsSystemWindows="true">
 
     <android.support.design.widget.AppBarLayout
@@ -40,7 +42,7 @@
 
                     <TextView
                         style="@style/DeviceLabel"
-                        android:text="@string/detail.name"/>
+                        android:text="@string/detail.device.label.name"/>
 
                     <TextView
                         android:id="@+id/detail.name"
@@ -51,7 +53,7 @@
 
                     <TextView
                         style="@style/DeviceLabel"
-                        android:text="@string/detail.rssi"/>
+                        android:text="@string/detail.device.label.rssi"/>
 
                     <TextView
                         android:id="@+id/detail.rssi"
@@ -62,7 +64,7 @@
 
                     <TextView
                         style="@style/DeviceLabel"
-                        android:text="@string/detail.address"/>
+                        android:text="@string/detail.device.label.address"/>
 
                     <TextView
                         android:id="@+id/detail.address"
@@ -73,7 +75,7 @@
 
                     <TextView
                         style="@style/DeviceLabel"
-                        android:text="@string/detail.state"/>
+                        android:text="@string/detail.device.label.state"/>
 
                     <TextView
                         android:id="@+id/detail.state"
