--- a/app/src/main/res/layout/activity_nursing_main.xml
+++ b/app/src/main/res/layout/activity_nursing_main.xml
@@ -1,18 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v4.widget.DrawerLayout android:id="@+id/nursing_drawer_layout"
-                                        style="@style/DrawerLayout"
-                                        xmlns:android="http://schemas.android.com/apk/res/android"
-                                        xmlns:app="http://schemas.android.com/apk/res-auto"
-                                        xmlns:tools="http://schemas.android.com/tools">
+<android.support.v4.widget.DrawerLayout
+    android:id="@+id/nursing_drawer_layout"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@null"
+    android:fitsSystemWindows="true">
 
     <android.support.design.widget.CoordinatorLayout
         android:id="@+id/nursing_coordinatorLayout"
-        style="@style/CoordinatorLayout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@null"
         tools:context=".activity.nurse.MainNursingActivity">
 
         <android.support.design.widget.AppBarLayout
             android:id="@+id/nursing_appbar"
-            style="@style/AppBarLayout">
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:fitsSystemWindows="true"
+            android:theme="@style/AppTheme.AppBarOverlay">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -37,7 +46,7 @@
                     android:layout_weight="1"
                     android:background="@null"
                     android:gravity="center"
-                    android:text="@string/rssi"
+                    android:text="@string/dashboard.toolbar.rssi"
                     android:textAppearance="?android:attr/textAppearanceMedium"/>
 
                 <ImageView
@@ -47,7 +56,7 @@
                     android:layout_gravity="center_vertical"
                     android:layout_margin="10dp"
                     android:layout_weight="1"
-                    android:contentDescription="@string/rssi"/>
+                    android:contentDescription="@string/dashboard.toolbar.rssi"/>
 
 
             </LinearLayout>
@@ -90,6 +99,9 @@
 
     <android.support.design.widget.NavigationView
         android:id="@+id/nursing_nav_view"
-        style="@style/NavigationView"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_gravity="start"
+        android:fitsSystemWindows="true"
         app:menu="@menu/menu_nursing"/>
 </android.support.v4.widget.DrawerLayout>
