--- a/app/src/main/res/layout/fragment_nursing_main_distance.xml
+++ b/app/src/main/res/layout/fragment_nursing_main_distance.xml
@@ -1,13 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v4.widget.NestedScrollView
-    style="@style/NestedScrollView"
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@null">
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@null"
         android:orientation="vertical">
+
         <com.rainbow.kam.bt_scanner.tools.design.CircleCounter
             android:id="@+id/distance_counter"
             style="@style/CircleCounter"
