--- a/app/src/main/res/layout/fragment_nursing_splash_add_device.xml
+++ b/app/src/main/res/layout/fragment_nursing_splash_add_device.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout style="@style/NestedScrollView"
-                xmlns:android="http://schemas.android.com/apk/res/android">
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@null">
 
     <android.support.v4.widget.SwipeRefreshLayout
         android:id="@+id/nursing_device_swipeRefreshLayout"
